Jekyll: publish future-dated posts (future: true) so the 2025-10-16 minutes appear

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ description: "Atas das reuniões semanais do GAD (quintas, 14:00 — America/Sao
 lang: pt-BR
 timezone: America/Sao_Paulo
 theme: minima
-
+future: true
+  
 # extras úteis no Pages
 plugins:
   - jekyll-feed
