--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Atas do GAD"
-description: "Atas das reuniões semanais do GAD (quintas, 14:00 — America/Sao_Paulo). Decisões, ações e responsáveis."
+title: "Memórias das reuniões do GAD"
+description: "Memórias das reuniões semanais do GAD (quintas, 14:00 — America/Sao_Paulo). Decisões, ações e responsáveis."
 lang: pt-BR
 timezone: America/Sao_Paulo
 theme: minima
